-*- org -*-

* 0.27 (Q1 2014) (edge bundle? "hyper" codemap?)

** codegraph

*** improve automatic layering by using hill climbing algorithm

** codemap

*** handle skip list 

*** improve completion box by considering not only files mentions in the
light db (while still filtering object files and skip list files)

** clang

*** improve codegraph for clang, less dupes, less false edges due to dupes

** php

*** support for short lambda, require traits, try finally

** internal

*** find_source.ml

* -----------------------------------------------------------

* 0.26 (Q4 2013) (basic OPAM package)

** internal:

*** opam package (just the parsers and commons)

*** port to 4.01 graph_code_cmt.ml, make it configurable
simplified configure output too

*** split h_program-lang, introduce graph_code/

** codegraph

*** new -derived_data option (generate TAGS, layers, prolog, light db)

*** build light db from graph_code, and make it fast enough

*** new -test_transitive_deps action to extract parts of huge codebase

** php

*** support for namespace part2 (graph_code)

** javascript

*** support new class syntax, JSX (xhp)

** doc

*** talk codemap/codegraph ocaml workshop
 http://ocaml.org/meetings/ocaml/2013/program.html

* 0.25 (Q3 2013) (codemap/codegraph integration)

** codemap

*** highlight users and uses of the file under the cursor
via graph_code

*** highlight users and uses of the entity under the cursor
via graph_code

*** treemap focus on users and uses of the file under the cursor
via graph_code, great!

*** bottom up and topdown layer using graph_code
associate a depth in the use graph to each file and entities.

** php

*** support for namespace part1 (parsing)

*** support shape

** ocaml

*** started to play with zamcov
refresh to 4.01, fix many bugs, cleanup makefiles, added some builtins,
added debugging support, better error message, stack trace, etc.

** spatch

*** better heuristics to preserve space around commas
 
** vcs
